--- a/docs/readme.adoc
+++ b/docs/readme.adoc
@@ -1,6 +1,16 @@
-== 🖼➡🖼🖼➡🖨 fit few copies of picture on printed page
+= 🖼➡🖼🖼➡🖨 fit few copies of picture on printed page
+:figure-caption!:
 
-=== development
+.screenshot
+[%collapsible]
+====
+// Custom HTML for the sake of lazy loading.
+++++
+<img src="./screenshot.webp" loading="lazy" />
+++++
+====
+
+== development
 
 "We feel the best way to become a well-rounded and highly-capable web developer is to focus first on learning what the web platform has to offer with as few frameworks and tools added on top as possible."
 -- https://modern-web.dev[Modern Web], "`https://modern-web.dev/guides/going-buildless[Going Buildless]`" https://modern-web.dev/guides/going-buildless/getting-started/[§ Getting Started] (https://github.com/modernweb-dev/web/blob/8c0250c6d844767896360d083e743c5a3edc502a/docs/guides/going-buildless/getting-started.md[permalink])
@@ -14,9 +24,9 @@ This repo is intended to be a sample project about:
 * having use for the notoriously “shunned” `+reset+` button
 * and--to a small extent--validation, allowing scale-up in `+flex+` in `+grid+`, `+IntersectionObserver+`, `+<output>+`, print margins, units of length, etc.
 
-=== limitations
+== limitations
 
-* PWA support is untested and incomplete
+* PWA support is, technically, not fully to specificaton--"`a user agent MAY ignore it`" and if it does, the user will see the root of account's GitHub Pages (which is horribly extraneous)
 * accessibility is untested (meant to be hopefully serviceable to sighted screen reader users, partially sighted, etc.)
 
 ---
