🚚 moved non-screenshot images to their own folder
Naming the new folder `assets` is chosen after:

- consulting with search results on StackExchange network
- gitmoji.dev's usage of this term
- Unity's usage of this term
- to a smaller degree, UE's usage of this word

--- a/docs/readme.adoc
+++ b/docs/readme.adoc
@@ -35,6 +35,6 @@ See also: xref:./implementation notes{relfilesuffix}[].
 
 .attributions
 * the placeholder "`https://openmoji.org/library/emoji-E142/#variant=black[picture]`" is designed by https://openmoji.org/library/#author=Kai%20Magnus%20M%C3%BCller[Kai Magnus Müller] and https://openmoji.org/[OpenMoji]--the open-source emoji and icon project; license: https://creativecommons.org/licenses/by-sa/4.0/[CC BY-SA 4.0]
-* the link:../favicon.svg[favicon], condensed, repeated and extended with dark mode support, is adapted from "`https://openmoji.org/library/emoji-E142/#variant=black[picture]`" by https://openmoji.org/library/#author=Kai%20Magnus%20M%C3%BCller[Kai Magnus Müller] and https://openmoji.org/[OpenMoji], used under https://creativecommons.org/licenses/by-sa/4.0/[CC BY-SA 4.0]
+* the link:../assets/favicon.svg[favicon], condensed, repeated and extended with dark mode support, is adapted from "`https://openmoji.org/library/emoji-E142/#variant=black[picture]`" by https://openmoji.org/library/#author=Kai%20Magnus%20M%C3%BCller[Kai Magnus Müller] and https://openmoji.org/[OpenMoji], used under https://creativecommons.org/licenses/by-sa/4.0/[CC BY-SA 4.0]
 
 // spell-checker:enableCompoundWords
